# photo_kareliy

./: app.py  pyproject.toml
docs/: kareliy-photo.drawio
static/: index.pug  script.js  style.css
static/css/: gallery.css  gallery_item.css  header.css  main-block.css  popup.css
static/js/: mainblock.js  popup.js  popupImg.js
templates/: gallery.html  index.html  index1.html  item_gallery.html  main_block.html
