[tool.poetry]
name = "photo-kareliy"
version = "0.1.0"
description = ""
authors = ["vasiliy <vash050@rmbler.ru>"]
readme = "README.md"
packages = [{include = "photo_kareliy"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
